--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@heroicons/vue": "^2.1.5",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
+    "v-calendar": "^3.1.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
