--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.7.2",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
