--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/vue": "^2.1.5",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.5.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0",
