--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.1.5",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.5.0",
     "v-calendar": "^3.1.2",
