--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "firebase-admin": "^12.5.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.29",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.4.0",
+    "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
